methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: '<-' expected but ')' found.
 for (i <1 to 6){
               ^MethodsReturning:14: error: illegal start of simple expression
 }
 ^